Emphasize good test coverage is more important

--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -7,7 +7,9 @@
 # 2. If your collection repository is under the ansible-collections org,
 #    please keep in mind that the number of GHA jobs is limited
 #    and shared across all the collections in the org.
-#    So please test only against necessary entities (see p.1).
+#    So, focusing on good test coverage of your collection,
+#    please avoid testing against unnecessary entities such as
+#    ansible-core EOL versions your collection does not support.
 # 3. If you don't have unit or integration tests, remove corresponding sections.
 # 4. If your collection depends on other collections ensure they are installed,
 #    add them to the "test-deps" input.
