--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -197,7 +197,7 @@ jobs:
         include:
           # Timely add new versions announced in
           # https://github.com/ansible-collections/news-for-maintainers,
-          # consider dropping testing against EOL versions.
+          # consider dropping testing against EOL versions and versions you don't support.
           # ansible-core 2.13
           - ansible: stable-2.13
             python: '2.7'
