--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -9,7 +9,8 @@
 #    and shared across all the collections in the org.
 #    So, focusing on good test coverage of your collection,
 #    please avoid testing against unnecessary entities such as
-#    ansible-core EOL versions or versions your collection does not support.
+#    ansible-core EOL versions your collection does not support
+#    or ansible-core versions that are not EOL yet but not supported by the collection.
 # 3. If you don't have unit or integration tests, remove corresponding sections.
 # 4. If your collection depends on other collections ensure they are installed,
 #    add them to the "test-deps" input.
@@ -71,9 +72,9 @@ jobs:
           # around creation of a new stable branch, this might cause a problem
           # that two different versions of ansible-test use the same sanity test
           # ignore.txt file.
-          # Timely add new versions announced in
-          # https://github.com/ansible-collections/news-for-maintainers,
-          # consider dropping testing against EOL versions.
+          # Add new versions announced in
+          # https://github.com/ansible-collections/news-for-maintainers in a timely manner,
+          # consider dropping testing against EOL versions and versions you don't support.
           - stable-2.13
           - stable-2.14
           - stable-2.15
@@ -130,9 +131,9 @@ jobs:
       fail-fast: true
       matrix:
         ansible:
-          # Timely add new versions announced in
-          # https://github.com/ansible-collections/news-for-maintainers,
-          # consider dropping testing against EOL versions.
+          # Add new versions announced in
+          # https://github.com/ansible-collections/news-for-maintainers in a timely manner,
+          # consider dropping testing against EOL versions and versions you don't support.
           - stable-2.13
           - stable-2.14
           - stable-2.15
@@ -195,8 +196,8 @@ jobs:
           - '3.10'
           - '3.11'
         include:
-          # Timely add new versions announced in
-          # https://github.com/ansible-collections/news-for-maintainers,
+          # Add new versions announced in
+          # https://github.com/ansible-collections/news-for-maintainers in a timely manner,
           # consider dropping testing against EOL versions and versions you don't support.
           # ansible-core 2.13
           - ansible: stable-2.13
