--- a/meta/execution-environment.yml
+++ b/meta/execution-environment.yml
@@ -6,9 +6,9 @@
 # List your controller-side system package and/or Python package requirements
 # if exist in the files specified below to support easy execution environments building for your collection users
 # https://ansible.readthedocs.io/en/latest/getting_started_ee/index.html
-# If there are no such dependencies, please just remove the files.
 # See https://ansible.readthedocs.io/projects/builder/en/latest/collection_metadata/#how-to-verify-collection-level-metadata
 # to learn how to test your configuration.
+# Do not delete these files even if the collection has no dependencies!
 
 version: 3
 dependencies:
