--- a/meta/execution-environment.yml
+++ b/meta/execution-environment.yml
@@ -13,8 +13,8 @@
 # If you delete them, ansible-builder will use bindep.txt and requirements.txt
 # from the collection root by default. Especially requirements.txt in the root is often
 # used for test/build/development requirements for the collection, that are
-# not needed for end-users to use the collection. This would increase the EE
-# size and increase the chance of dependency collisions.
+# not needed for end-users to use the collection. Ansible-builder installing these
+# would increase the EE size and increase the chance of dependency collisions.
 
 dependencies:
   python: meta/ee-requirements.txt
