--- a/changelogs/config.yaml
+++ b/changelogs/config.yaml
@@ -1,3 +1,4 @@
+add_plugin_period: true
 changelog_filename_template: ../CHANGELOG.rst
 changelog_filename_version_depth: 0
 changes_file: changelog.yaml
@@ -27,3 +28,4 @@ sections:
   - Known Issues
 title: CHANGE THIS IN changelogs/config.yaml!
 trivial_section_name: trivial
+use_fqcn: true
