--- a/docs/docsite/links.yml
+++ b/docs/docsite/links.yml
@@ -46,4 +46,4 @@ communication:
   forums:
     - topic: Ansible Forum
       # The following URL directly points to the "Get Help" section
-      url: https://forum.ansible.com/c/help/6/none
+      url: https://forum.ansible.com/c/help/6
