--- a/.github/workflows/ansible-test.yml
+++ b/.github/workflows/ansible-test.yml
@@ -79,6 +79,7 @@ jobs:
           - stable-2.15
           - stable-2.16
           - stable-2.17
+          - stable-2.18
           - devel
         # - milestone
     # Ansible-test on various stable branches does not yet work well with cgroups v2.
@@ -138,6 +139,7 @@ jobs:
           - stable-2.15
           - stable-2.16
           - stable-2.17
+          - stable-2.18
           - devel
         # - milestone
 
@@ -245,6 +247,19 @@ jobs:
             python: '3.11'
           - ansible: stable-2.17
             python: '3.12'
+          # ansible-core 2.18
+          - ansible: stable-2.18
+            python: '3.8'
+          - ansible: stable-2.18
+            python: '3.9'
+          - ansible: stable-2.18
+            python: '3.10'
+          - ansible: stable-2.18
+            python: '3.11'
+          - ansible: stable-2.18
+            python: '3.12'
+          - ansible: stable-2.18
+            python: '3.13'
 
 
     steps:
