--- a/changelogs/config.yaml
+++ b/changelogs/config.yaml
@@ -1,15 +1,22 @@
 ---
 add_plugin_period: true
-changelog_filename_template: ../CHANGELOG.rst
-changelog_filename_version_depth: 0
+changelog_nice_yaml: true
+changelog_sort: version
 changes_file: changelog.yaml
 changes_format: combined
+ignore_other_fragment_extensions: true
 keep_fragments: false
 mention_ancestor: true
 new_plugins_after_name: removed_features
 notesdir: fragments
+output:
+- file: CHANGELOG.rst
+  format: rst
+- file: CHANGELOG.md
+  format: md
 prelude_section_name: release_summary
 prelude_section_title: Release Summary
+sanitize_changelog: true
 sections:
 - - major_changes
   - Major Changes
@@ -30,3 +37,4 @@ sections:
 title: CHANGE THIS IN changelogs/config.yaml!
 trivial_section_name: trivial
 use_fqcn: true
+vcs: auto
